update do site 25_08_23

--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 <body>
     <header>
         <h1>CURSOS GRATÍS</h1>
+        <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso de HTML5 e CSS3">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quidem natus, nesciunt doloremque hic magnam expedita aperiam magni quasi necessitatibus maxime incidunt dolorem. Placeat tempore veniam, accusamus corporis sed fuga.</p>
+            <a href="curso-html.html">
+                <p>Acesse o curso de HTML5</p>
+            </a>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso de Javascript">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique ipsa accusantium, quo quis eos odio? Distinctio voluptas consectetur minima molestiae fuga, optio aliquam nostrum. Facilis nam quibusdam reiciendis deserunt fugiat.</p>
+            <a href="curso-js.html">
+                <p>Acesse o curso de JavaScript</p>
+            </a>
         </article>
     </header>
 </body>
